--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                      I think it is pretty cool looking, but it doesn't animate well.  I suspect this is due to the raydirection
                      function, and I hope to investigate further to see if I can get this version to animate.
 					 <br>
-					 <img class="img" src="../assets/crystal.png" alt="Crystal Mandelbulb" width="400" height="400">
+					 <img class="img" src="https://github.com/kfahn22/mandelbulb/blob/gh-pages/crystal.png" alt="Crystal Mandelbulb" width="400" height="400">
 					 <br>
                     <a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb sketch</a></a>
 					<br>
