--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="https://kfahn.github.io/style.css">
+	<link rel="stylesheet" href="https://github.com/kfahn22/mandelbulb/blob/gh-pages/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
                       youtube tutorial by Martijn Steinrucken. <a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding:  Bending Light</a></a>
 					  Rather than the more advanced method of coloring the mandelbulb using edge detection, each of the x,y,z dimensions is assigned a different RGB color.  
                       <br>
-					  <img class="img" src="../assets/three_color.png" alt="Three Color Mandelbulb" width="450" height="450">
+					  <img class="img" src="https://github.com/kfahn22/mandelbulb/blob/gh-pages/three_color.png" alt="Three Color Mandelbulb" width="450" height="450">
 					  <br>
 					  <a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb sketch</a></a>
                       <br>
@@ -56,7 +56,7 @@
                     This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube tutorial. There is quite a bit
 					of aliasing when animating, which is an avenue for future improvement. <a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with Maths</a></a>.
 					<br>
-					<img class="img" src="../assets/single_color.png" alt="Single Color Mandelbulb" width="400" height="400">
+					<img class="img" src="https://github.com/kfahn22/mandelbulb/blob/gh-pages/single_color.png" alt="Single Color Mandelbulb" width="400" height="400">
 					<br>
 					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb sketch</a></a>
 					<br>
@@ -95,12 +95,12 @@
 					the normals were facing the wrong direction!  I eventually came up with this version.  While not horrible, it is not fully rendered and it kind of looks 
 					the mandelbulb is in prison.
                     <br>
-					 <img class="img" src="../assets/meshlab.png" alt="Meshlab Mandelbulb" width="400" height="400">
+					 <img class="img" src="https://github.com/kfahn22/mandelbulb/blob/gh-pages/meshlab.png" alt="Meshlab Mandelbulb" width="400" height="400">
 					 <br>
                     For the next attempt, I loaded the vertices into Blender.  I was able to obtain something that looked like a very low-res version of the mandelbulb, but still 
 					doesn't compare to the beauty of a nicely rendered version.
 					<br>
-					<img class="img" src="../assets/blender.png" alt="Blender Mandelbulb" width="400" height="400">
+					<img class="img" src="https://github.com/kfahn22/mandelbulb/blob/gh-pages/blender.png" alt="Blender Mandelbulb" width="400" height="400">
                     <br>
 					By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would be a 
 					better approach.  During a livestream on Twitch, he explored this possibility and provided the background 
