a couple more changes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 				By the end of the challenge, he had created a point cloud version of the mandelbulb.  He was kind enough to share his .txt file and code on Discord for a couple of us that were interested 
 				in tryng to render the mandelbulb.  This was the start of my journey--see below for my earliest attempts.
 
-				At this point, I have rendered the mandelbulb using several different light techniques.  I am very please with the three color version, at least compared to my
+				At this point, I have rendered the mandelbulb using several different lighting techniques.  I am very please with the three color version, at least compared to my
 				initial attempts.  There is still some aliasing when the colored mandelbulbs are animated, so this is something that needs improvement.  
+
+				One thing to note is that uvs in shaders have values from 0, 1.  
 			</p>
 			</div>
 			<div class = "mandelbulb" style="flex-grow:1" id="mandelbulb1">
