--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 				At this point, I have rendered the mandelbulb using several different lighting techniques.  I am very please with the three color version, at least compared to my
 				initial attempts.  There is still some aliasing when the colored mandelbulbs are animated, so this is something that needs improvement.  
 
-				One thing to note is that uvs in shaders have values from 0, 1.  
+				One thing to note is that uvs in shaders have floating point values from 0.0, 1.0 instead of 0 to 255.  Ultimately, each pixel is colored according to its uv value that is passed 
+				to gl_FragColor at the end of the frag file.  The values are usually set initially to 0.0 or some background color and then changed by adding or multiplying using matrix operations. 
+				 It is possible to inadvertantly set some (or all) of the uvs to 1.0 which will result in an over-exposed object or could even a white screen.
+
+				)
+			
+
+
 			</p>
 			</div>
 			<div class = "mandelbulb" style="flex-grow:1" id="mandelbulb1">
