puttig image in assets folder

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       youtube tutorial by Martijn Steinrucken. <a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding:  Bending Light</a></a>
 					  Rather than the more advanced method of coloring the mandelbulb using edge detection, each of the x,y,z dimensions is assigned a different RGB color.  
                       <br>
-					  <img class="img" src="three_color.png" alt="Three Color Mandelbulb" width="450" height="450">
+					  <img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="450" height="450">
 					  <br>
 					  <a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb sketch</a></a>
                       <br>
