--- a/index.html
+++ b/index.html
@@ -22,106 +22,130 @@
 		<!--<input class="form-control" id="myInput" type="text" placeholder="Search.."> -->
 
 		<div class="d-flex flex-column" id="myDIV">
-			
-			<div class = "intro" style="flex-grow:1" id="intro">
-			<h2>Introduction</h2>
-            <p>I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics professor) became interested in coding it using postscript.
-				I am not sure whether I ever saw his version, but I remember looking at the pictures in a book he purchased.  I was fascinated with the intricate 
-				designs!
-				
-				Fast forward many decades.  NYU professor Daniel Shiffman (The Coding Train) did a Mandelbulb coding challenge in February using Processing <a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The Mandelbulb</a>. 
-				By the end of the challenge, he had created a point cloud version of the mandelbulb!  He was kind enough to share his .txt file and processing code in the Coding Train Discord for a couple of us that were interested 
-				in tryng to render the mandelbulb.  This was the start of my journey--see below for my earliest attempts.
 
-				At this point, I have rendered the mandelbulb using several different lighting techniques. There is still a lot of room for improvement--I do not have true edge detection and there is aliasing when the mandelbulbs are animated. 
-				Nonetheless, I am still excited with the results, especially the thee color version.  
+			<div class="intro" style="flex-grow:1" id="intro">
+				<h2>Introduction</h2>
+				<p>I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics
+					professor) became interested in coding it using postscript.
+					I am not sure whether I ever saw his version, but I remember looking at the pictures in a book he
+					purchased. I was fascinated with the intricate
+					designs!
 
-				One thing to note is that uvs in shaders have floating point values from 0.0, 1.0 instead of 0 to 255.  Ultimately, each pixel is colored according to its uv value that is passed 
-				to gl_FragColor at the end of the frag file.  The values are usually set initially to 0.0 or some background color and then changed by adding or multiplying using matrix operations. 
-				 It is possible to inadvertantly set some (or all) of the uvs to 1.0 which will result in an over-exposed object or could even a white screen.
+					Fast forward many decades. NYU professor Daniel Shiffman (The Coding Train) did a Mandelbulb coding
+					challenge in February using Processing <a class="link"
+						href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The Mandelbulb</a>.
+					By the end of the challenge, he had created a point cloud version of the mandelbulb! He was kind
+					enough to share his .txt file and processing code in the Coding Train Discord for a couple of us
+					that were interested
+					in tryng to render the mandelbulb. This was the start of my journey--see below for my earliest
+					attempts.
 
-				 Another thing to note is that the three color version renders fairly quickly, but the other versions are slower and I think they are consuming a lot of computing power.
-			</p>
+					At this point, I have rendered the mandelbulb using several different lighting techniques. There is
+					still a lot of room for improvement--I do not have true edge detection and there is aliasing when
+					the mandelbulbs are animated. Nonetheless, I am still excited with the results, especially the thee
+					color version. </p>
+				<br>
+				<p></p>
+				One thing to note is that uvs in shaders have floating point values from 0.0, 1.0 instead of 0 to 255.
+				Ultimately, each pixel is colored according to its uv value that is passed
+				to gl_FragColor at the end of the frag file. The values are usually set initially to 0.0 or some
+				background color and then changed by adding or multiplying using matrix operations.
+				It is possible to inadvertantly set some (or all) of the uvs to 1.0 which will result in an over-exposed
+				object or could even a white screen. Another thing to note is that the three color version renders
+				fairly quickly, but the other versions are
+				slower and I think they are consuming a lot of computing power.
+				</p>
 			</div>
-			<div class = "mandelbulb" style="flex-grow:1" id="mandelbulb1">
+			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
 				<h2>Three Color Mandelbulb</h2>
-				<p>  This rendered version uses the lighting techniques described in The Art of Code:  Bending lighting"
-                      youtube tutorial by Martijn Steinrucken. <a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding:  Bending Light</a></a>
-					  Rather than the more advanced method of coloring the mandelbulb using edge detection, each of the x,y,z dimensions is assigned a different RGB color.  
-                      <br>
-					  <img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
-					  <br>
-					  <a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb sketch</a></a>
-                      <br>
-					  <a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
-                    </p>
+				<p> This rendered version uses the lighting techniques described in The Art of Code: Bending lighting"
+					youtube tutorial by Martijn Steinrucken. <a class="link"
+						href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
+					Rather than the more advanced method of coloring the mandelbulb using edge detection, each of the
+					x,y,z dimensions is assigned a different RGB color.
+					<br>
+					<br>
+					<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
+				</p>
 			</div>
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
 				<h2>Single Color Mandelbulb</h2>
 				<p>
-                    This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube tutorial. There is quite a bit
-					of aliasing when animating, which is an avenue for future improvement. 
+					This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
+					tutorial. There is quite a bit
+					of aliasing when animating, which is an avenue for future improvement.
 					<br>
-					<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with Maths</a></a>.
-					<br>
-					<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="400" height="400">
-					<br>
-					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb sketch</a></a>
-					<br>
-                    <a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Blue">Code</a></a>
-                </p>
-            </div>
-            <div class="mandelbulb" style="flex-grow:1" id="mandelbulb3">
-                        <h2>No color mandelbulb</h2>
-                        <p>
-                            <a class="link" href="https://editor.p5js.org/kfahn/full/2nVVeL-RY">Plain mandelbulb sketch</a></a>
 
-                            <a class="link" href="">Code</a></a>
-                        </p>
-				</div>
-			</div>
-            <div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-                <h2>"Crystal" mandelbulb</h2>
-                <p>
-                    This is my first render of the mandelbulb in p5.js.  I started out using Jamie Wong's Shadertoy sketch
-                    as a guide, which uses phong illumination <a class="link" href="https://www.shadertoy.com/view/llt3R4">Jamie Wong's shadertoy code</a>. 
-                     I think it is pretty cool looking, but it doesn't animate well.  I suspect this is due to the raydirection
-                     function, and I hope to investigate further to see if I can get this version to animate.
-					 <br>
-					 <img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
-					 <br>
-                    <a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb sketch</a></a>
+					<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
+						Maths</a></a>.
 					<br>
-                    <a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
-                </p>
+					<br>
+					<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="500"
+						height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Blue">Code</a></a>
+				</p>
+			</div>
+
+			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+				<h2>"Crystal" mandelbulb</h2>
+				<p>
+					This is my first render of the mandelbulb in p5.js. I started out using Jamie Wong's Shadertoy
+					sketch
+					as a guide, which uses phong illumination <a class="link"
+						href="https://www.shadertoy.com/view/llt3R4">Jamie Wong's shadertoy code</a>.
+					I think it is pretty cool looking, but it doesn't animate well. I suspect this is due to the
+					raydirection
+					function, and I hope to investigate further to see if I can get this version to animate.
+					<br>
+					<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
+				</p>
 			</div>
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-                <h2>Earlier Attempts</h2>
-                <p>
-                    I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded the vertices (all 206,828 of them)
-					into MeshLab and used a guide a found in github to try to mesh the vertices.  The first version looked rather like a pin cushion because 
-					the normals were facing the wrong direction!  I eventually came up with this version.  While not horrible, it is not fully rendered and it kind of looks 
+				<h2>Earlier Attempts</h2>
+				<p>
+					I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
+					the
+					vertices (all 206,828 of them)
+					into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
+					looked
+					rather like a pin cushion because
+					the normals were facing the wrong direction! I eventually came up with this version. While not
+					horrible,
+					it is not fully rendered and it kind of looks
 					the mandelbulb is in prison.
-                    <br>
-					 <img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
-					 <br>
-                    For the next attempt, I loaded the vertices into Blender.  I was able to obtain something that looked like a very low-res version of the mandelbulb, but still 
+					<br>
+					<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
+					<br>
+					For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
+					like a very low-res version of the mandelbulb, but still
 					doesn't compare to the beauty of a nicely rendered version.
 					<br>
 					<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
-                    <br>
-					By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would be a 
-					better approach.  During a livestream on Twitch, he explored this possibility and provided the background 
-					that I ultimately used to render the mandelbulb.  <a class="link" href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a> 
-                </p>
+					<br>
+					By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
+					be a
+					better approach. During a livestream on Twitch, he explored this possibility and provided the
+					background
+					that I ultimately used to render the mandelbulb. <a class="link"
+						href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
+				</p>
 			</div>
-        </div>
-    </div>
-		
-
 		</div>
 	</div>
-
 
 	<!-- javascript -->
 	<!-- This function toggles a read more button -->
@@ -171,4 +195,3 @@
 </body>
 
 </html>
-
