adding a different single color version

--- a/index.html
+++ b/index.html
@@ -62,29 +62,47 @@
 						href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
 					Rather than the more advanced method of coloring the mandelbulb using edge detection, each of the
 					x,y,z dimensions is assigned a different RGB color.
-					<br>
-					<br>
+					</p>
 					<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
 					<br>
 					<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
 						sketch</a></a>
 					<br>
 					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
+			</div>
+			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
+				<h2>One Color Mandelbulb</h2>
+				<p>
+					This version uses the basic ray marching starting point provided by Martijn Steinrucken.
+					<br>
+
+					<a class="link" href="https://www.shadertoy.com/view/WtGXDD">Ray Marching Starting Point</a></a>.
+					<br>
+					<br>
+					<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="500"
+						height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/2w56dWbzL">Single color mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="">Code</a></a>
 				</p>
 			</div>
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
-				<h2>Single Color Mandelbulb</h2>
+				<h2>Mandelbulb using Inigo Quilez lighting</h2>
 				<p>
 					This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
-					tutorial. There is quite a bit
-					of aliasing when animating, which is an avenue for future improvement.
+					tutorial. Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
+					of a blobby monster jumping.  It can be difficult to know how to adjust lighting parameters to a new shader.
+					I think this is the reason that this version is over-exposed.  There is also quite a bit
+					of aliasing when it is animating.  Improving the lighting and animation are avenues for future improvement.
 					<br>
 
 					<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
 						Maths</a></a>.
 					<br>
 					<br>
-					<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="500"
+					<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" width="500"
 						height="500">
 					<br>
 					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
