--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<a class="link" href="https://editor.p5js.org/kfahn/full/2w56dWbzL">Single color mandelbulb
 						sketch</a></a>
 					<br>
-					<a class="link" href="">Code</a></a>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/One%20Color">Code</a></a>
 				</p>
 			</div>
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
@@ -108,7 +108,7 @@
 					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
 						sketch</a></a>
 					<br>
-					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Blue">Code</a></a>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
 				</p>
 			</div>
 
