--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					This version uses the basic ray marching starting point provided by Martijn Steinrucken.
 					<br>
 
-					<a class="link" href="https://www.shadertoy.com/view/WtGXDD">Ray Marching Starting Point</a></a>.
+					<a class="link" href="https://www.shadertoy.com/view/WtGXDD">Ray Marching Starting Point</a></a>
 					<br>
 					<br>
 					<img class="img" src="assets/single_color.png" alt="Single Color Mandelbulb" width="500"
