--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="flex-container" id="flex">
 		<!--<input class="form-control" id="myInput" type="text" placeholder="Search.."> -->
 
-		<div class="d-flex flex-column" id="myDIV">
+		<div class="d-flex flex-row" id="myDIV">
 
 			<div class="intro" style="flex-grow:1" id="intro">
 				<h2>Introduction</h2>
@@ -55,20 +55,24 @@
 				power.
 				</p>
 			</div>
+		</div>
+		<div class="d-flex flex-row" id="myDIV">
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
 				<h2>Three Color Mandelbulb</h2>
 				<p> This rendered version uses the lighting techniques described in The Art of Code: Bending lighting"
-					youtube tutorial by Martijn Steinrucken. <a class="link"
-						href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
-					Rather than the more advanced method of coloring the mandelbulb using edge detection, each of the
+					youtube tutorial by Martijn Steinrucken. Rather than the more advanced method of coloring the
+					mandelbulb
+					using edge detection, each of the
 					x,y,z dimensions is assigned a different RGB color.
-					</p>
-					<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
-					<br>
-					<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
-						sketch</a></a>
-					<br>
-					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
+				</p>
+				<a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
+				<br>
+				<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
+				<br>
+				<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
+					sketch</a></a>
+				<br>
+				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Multi_color">Code</a></a>
 			</div>
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
 				<h2>One Color Mandelbulb</h2>
@@ -88,81 +92,85 @@
 					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/One%20Color">Code</a></a>
 				</p>
 			</div>
-			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
-				<h2>Mandelbulb using Inigo Quilez lighting</h2>
-				<p>
-					This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
-					tutorial. Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
-					of a blobby monster jumping.  It can be difficult to know how to adjust lighting parameters to a new shader.
-					I think this is the reason that this version is over-exposed.  There is also quite a bit
-					of aliasing when it is animating.  Improving the lighting and animation are avenues for future improvement.
-					<br>
+		</div>
+		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
+			<h2>Mandelbulb using Inigo Quilez lighting</h2>
+			<p>
+				This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
+				tutorial. Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
+				of a blobby monster jumping. It can be difficult to know how to adjust lighting parameters to a new
+				shader.
+				I think this is the reason that this version is over-exposed. There is also quite a bit
+				of aliasing when it is animating. Improving the lighting and animation are avenues for future
+				improvement.
+				<br>
 
-					<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
-						Maths</a></a>.
-					<br>
-					<br>
-					<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" width="500"
-						height="500">
-					<br>
-					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
-						sketch</a></a>
-					<br>
-					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
-				</p>
-			</div>
+				<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
+					Maths</a></a>.
+				<br>
+				<br>
+				<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" width="500"
+					height="500">
+				<br>
+				<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
+					sketch</a></a>
+				<br>
+				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
+			</p>
+		</div>
 
-			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-				<h2>"Crystal" mandelbulb</h2>
-				<p>
-					This is my first render of the mandelbulb in p5.js. I started out using Jamie Wong's Shadertoy
-					sketch
-					as a guide, which uses phong illumination <a class="link"
-						href="https://www.shadertoy.com/view/llt3R4">Jamie Wong's shadertoy code</a>.
-					I think it is pretty cool looking, but it doesn't animate well. I suspect this is due to the
-					raydirection
-					function, and I hope to investigate further to see if I can get this version to animate.
-					<br>
-					<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
-					<br>
-					<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
-						sketch</a></a>
-					<br>
-					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
-				</p>
-			</div>
-			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-				<h2>Earlier Attempts</h2>
-				<p>
-					I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
-					the
-					vertices (all 206,828 of them)
-					into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
-					looked
-					rather like a pin cushion because
-					the normals were facing the wrong direction! I eventually came up with this version. While not
-					horrible,
-					it is not fully rendered and it kind of looks
-					the mandelbulb is in prison.
-					<br>
-					<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
-					<br>
-					For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
-					like a very low-res version of the mandelbulb, but still
-					doesn't compare to the beauty of a nicely rendered version.
-					<br>
-					<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
-					<br>
-					By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
-					be a
-					better approach. During a livestream on Twitch, he explored this possibility and provided the
-					background
-					that I ultimately used to render the mandelbulb. <a class="link"
-						href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
-				</p>
-			</div>
+		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+			<h2>"Crystal" mandelbulb</h2>
+			<p>
+				This is my first render of the mandelbulb in p5.js. I started out using Jamie Wong's Shadertoy
+				sketch
+				as a guide, which uses phong illumination <a class="link"
+					href="https://www.shadertoy.com/view/llt3R4">Jamie Wong's shadertoy code</a>.
+				I think it is pretty cool looking, but it doesn't animate well. I suspect this is due to the
+				raydirection
+				function, and I hope to investigate further to see if I can get this version to animate.
+				<br>
+				<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
+				<br>
+				<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
+					sketch</a></a>
+				<br>
+				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
+			</p>
+		</div>
+
+		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+			<h2>Earlier Attempts</h2>
+			<p>
+				I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
+				the
+				vertices (all 206,828 of them)
+				into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
+				looked
+				rather like a pin cushion because
+				the normals were facing the wrong direction! I eventually came up with this version. While not
+				horrible,
+				it is not fully rendered and it kind of looks
+				the mandelbulb is in prison.
+				<br>
+				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
+				<br>
+				For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
+				like a very low-res version of the mandelbulb, but still
+				doesn't compare to the beauty of a nicely rendered version.
+				<br>
+				<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
+				<br>
+				By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
+				be a
+				better approach. During a livestream on Twitch, he explored this possibility and provided the
+				background
+				that I ultimately used to render the mandelbulb. <a class="link"
+					href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
+			</p>
 		</div>
 	</div>
+	
 
 	<!-- javascript -->
 	<!-- This function toggles a read more button -->
