--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
 	<div class="flex-container" id="flex">
 		<!--<input class="form-control" id="myInput" type="text" placeholder="Search.."> -->
 
-		<div class="d-flex flex-row" id="myDIV">
 
-			<div class="intro" style="flex-grow:1" id="intro">
-				<h2>Introduction</h2>
-				<p>I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics
-					professor) became interested in coding it using postscript.
-					I am not sure whether I ever saw his version, but I remember looking at the pictures in a book he
-					purchased. I was fascinated with the intricate
-					designs!
 
-					Fast forward many decades. NYU professor Daniel Shiffman (The Coding Train) did a Mandelbulb coding
-					challenge in February using Processing. By the end of the challenge, he had created a point cloud
-					version of the mandelbulb! He was kind
-					enough to share his .txt file and processing code in the Coding Train Discord for a couple of us
-					that were interested in tryng to render the mandelbulb. This was the start of my journey--see below
-					for my earliest
-					attempts.<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
-						Mandelbulb</a>
-
-					At this point, I have rendered the mandelbulb using several different lighting techniques. There is
-					still a lot of room for improvement--I do not have true edge detection and there is aliasing when
-					the mandelbulbs are animated. Nonetheless, I am still excited with the results, especially the thee
-					color version. </p>
-				<p></p>
+		<div class="intro" style="flex-grow:1" id="intro">
+			<h2>Introduction</h2>
+			<p>I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics
+				professor) became interested in coding it using postscript.
+				I am not sure whether I ever saw his version, but I remember looking at the pictures in a book he
+				purchased. I was fascinated with the intricate
+				designs!</p>
+			<p>
+				Fast forward many decades. NYU professor Daniel Shiffman (The Coding Train) did a Mandelbulb coding
+				challenge in February using Processing. By the end of the challenge, he had created a point cloud
+				version of the mandelbulb! He was kind
+				enough to share his .txt file and processing code in the Coding Train Discord for a couple of us
+				that were interested in tryng to render the mandelbulb. This was the start of my journey--see below
+				for my earliest
+				attempts.<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
+					Mandelbulb</a></p>
+			<p>
+				At this point, I have rendered the mandelbulb using several different lighting techniques. There is
+				still a lot of room for improvement--I do not have true edge detection and there is aliasing when
+				the mandelbulbs are animated. Nonetheless, I am still excited with the results, especially the thee
+				color version. </p>
+			<p>
 				One thing to note is that uvs in shaders have floating point values from 0.0, 1.0 instead of 0 to 255.
 				Ultimately, each pixel is colored according to its uv value that is passed
 				to gl_FragColor at the end of the frag file. The values are usually set initially to 0.0 or some
@@ -53,8 +53,7 @@
 				object or even a white screen. Another thing to note is that while the three color version renders
 				fairly quickly, but the other versions are slower and I think they are consuming a lot of computing
 				power.
-				</p>
-			</div>
+			</p>
 		</div>
 		<div class="d-flex flex-row" id="myDIV">
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
@@ -93,130 +92,132 @@
 				</p>
 			</div>
 		</div>
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
-			<h2>Mandelbulb using Inigo Quilez lighting</h2>
-			<p>
-				This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
-				tutorial. Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
-				of a blobby monster jumping. It can be difficult to know how to adjust lighting parameters to a new
-				shader.
-				I think this is the reason that this version is over-exposed. There is also quite a bit
-				of aliasing when it is animating. Improving the lighting and animation are avenues for future
-				improvement.
-				<br>
+		<div class="d-flex flex-row" id="myDIV">
+			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
+				<h2>Mandelbulb using Inigo Quilez lighting</h2>
+				<p>
+					This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
+					tutorial. Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
+					of a blobby monster jumping. It can be difficult to know how to adjust lighting parameters to a new
+					shader.
+					I think this is the reason that this version is over-exposed. There is also quite a bit
+					of aliasing when it is animating. Improving the lighting and animation are avenues for future
+					improvement.
+					<br>
 
-				<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
-					Maths</a></a>.
-				<br>
-				<br>
-				<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" width="500"
-					height="500">
-				<br>
-				<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
-					sketch</a></a>
-				<br>
-				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
-			</p>
+					<a class="link" href="https://www.youtube.com/watch?v=Cfe5UQ-1L9Q">Live Coding and Painting with
+						Maths</a></a>.
+					<br>
+					<br>
+					<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2"
+						width="500" height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/IQ_Lighting">Code</a></a>
+				</p>
+			</div>
+
+			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+				<h2>"Crystal" mandelbulb</h2>
+				<p>
+					This is my first render of the mandelbulb in p5.js. I started out using Jamie Wong's Shadertoy
+					sketch
+					as a guide, which uses phong illumination <a class="link"
+						href="https://www.shadertoy.com/view/llt3R4">Jamie
+						Wong's shadertoy code</a>.
+					I think it is pretty cool looking, but it doesn't animate well. I suspect this is due to the
+					raydirection
+					function, and I hope to investigate further to see if I can get this version to animate.
+					<br>
+					<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
+					<br>
+					<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
+						sketch</a></a>
+					<br>
+					<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
+				</p>
+			</div>
+
+			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
+				<h2>Earlier Attempts</h2>
+				<p>
+					I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
+					the
+					vertices (all 206,828 of them)
+					into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
+					looked
+					rather like a pin cushion because
+					the normals were facing the wrong direction! I eventually came up with this version. While not
+					horrible,
+					it is not fully rendered and it kind of looks
+					the mandelbulb is in prison.
+					<br>
+					<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
+					<br>
+					For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
+					like a very low-res version of the mandelbulb, but still
+					doesn't compare to the beauty of a nicely rendered version.
+					<br>
+					<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
+					<br>
+					By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
+					be a
+					better approach. During a livestream on Twitch, he explored this possibility and provided the
+					background
+					that I ultimately used to render the mandelbulb. <a class="link"
+						href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
+				</p>
+			</div>
 		</div>
 
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-			<h2>"Crystal" mandelbulb</h2>
-			<p>
-				This is my first render of the mandelbulb in p5.js. I started out using Jamie Wong's Shadertoy
-				sketch
-				as a guide, which uses phong illumination <a class="link"
-					href="https://www.shadertoy.com/view/llt3R4">Jamie Wong's shadertoy code</a>.
-				I think it is pretty cool looking, but it doesn't animate well. I suspect this is due to the
-				raydirection
-				function, and I hope to investigate further to see if I can get this version to animate.
-				<br>
-				<img class="img" src="assets/crystal.png" alt="Crystal Mandelbulb" width="500" height="500">
-				<br>
-				<a class="link" href="https://editor.p5js.org/kfahn/full/o5sX5O0cF">Crystal mandelbulb
-					sketch</a></a>
-				<br>
-				<a class="link" href="https://github.com/kfahn22/mandelbulb/tree/main/Crystal">Code</a></a>
-			</p>
-		</div>
 
-		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
-			<h2>Earlier Attempts</h2>
-			<p>
-				I initially tried to render the mandelbulb using MeshLab. Following Dan Shiffman's lead, I loaded
-				the
-				vertices (all 206,828 of them)
-				into MeshLab and used a guide a found in github to try to mesh the vertices. The first version
-				looked
-				rather like a pin cushion because
-				the normals were facing the wrong direction! I eventually came up with this version. While not
-				horrible,
-				it is not fully rendered and it kind of looks
-				the mandelbulb is in prison.
-				<br>
-				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
-				<br>
-				For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
-				like a very low-res version of the mandelbulb, but still
-				doesn't compare to the beauty of a nicely rendered version.
-				<br>
-				<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
-				<br>
-				By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
-				be a
-				better approach. During a livestream on Twitch, he explored this possibility and provided the
-				background
-				that I ultimately used to render the mandelbulb. <a class="link"
-					href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
-			</p>
-		</div>
-	</div>
-	
-
-	<!-- javascript -->
-	<!-- This function toggles a read more button -->
-	<script>
-		$(document).ready(function () {
-			$("#myInput").on("keyup", function () {
-				var value = $(this).val().toLowerCase();
-				$("#myDIV *").filter(function () {
-					$(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+		<!-- javascript -->
+		<!-- This function toggles a read more button -->
+		<script>
+			$(document).ready(function () {
+				$("#myInput").on("keyup", function () {
+					var value = $(this).val().toLowerCase();
+					$("#myDIV *").filter(function () {
+						$(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+					});
 				});
 			});
-		});
-	</script>
+		</script>
 
-	<!-- This function is for a Read more read less button -->
-	<!-- Code found on codepen legendaryPower "Simple Read Less Read More Button"-->
-	<script>
-		$(document).ready(function () {
-			$("#toggle").click(function () {
-				var elem = $("#toggle").text();
-				if (elem == "Answer") {
-					//Stuff to do when btn is in the read more state
-					$("#toggle").text("Close");
-					$("#text").slideDown();
-				} else {
-					//Stuff to do when btn is in the read less state
-					$("#toggle").text("Answer");
-					$("#text").slideUp();
-				}
+		<!-- This function is for a Read more read less button -->
+		<!-- Code found on codepen legendaryPower "Simple Read Less Read More Button"-->
+		<script>
+			$(document).ready(function () {
+				$("#toggle").click(function () {
+					var elem = $("#toggle").text();
+					if (elem == "Answer") {
+						//Stuff to do when btn is in the read more state
+						$("#toggle").text("Close");
+						$("#text").slideDown();
+					} else {
+						//Stuff to do when btn is in the read less state
+						$("#toggle").text("Answer");
+						$("#text").slideUp();
+					}
+				});
 			});
-		});
-	</script>
+		</script>
 
-	<!--This function open and closes a curtain overlay -->
+		<!--This function open and closes a curtain overlay -->
 
-	<script>
-		/* Open when someone clicks on the span element */
-		function openNav() {
-			document.getElementById("myNav").style.width = "100%";
-		}
+		<script>
+			/* Open when someone clicks on the span element */
+			function openNav() {
+				document.getElementById("myNav").style.width = "100%";
+			}
 
-		/* Close when someone clicks on the "x" symbol inside the overlay */
-		function closeNav() {
-			document.getElementById("myNav").style.width = "0%";
-		}
-	</script>
+			/* Close when someone clicks on the "x" symbol inside the overlay */
+			function closeNav() {
+				document.getElementById("myNav").style.width = "0%";
+			}
+		</script>
 </body>
 
 </html>
