--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 	<div class="flex-container" id="flex">
 		<!--<input class="form-control" id="myInput" type="text" placeholder="Search.."> -->
 
-
-
 		<div class="intro" style="flex-grow:1" id="intro">
 			<h2>Introduction</h2>
 			<p>I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics
@@ -55,14 +53,12 @@
 				power.
 			</p>
 		</div>
-		<div class="d-flex flex-row" id="myDIV">
+		<div class="d-flex flex-row" id="myDIV1">
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
 				<h2>Three Color Mandelbulb</h2>
 				<p> This rendered version uses the lighting techniques described in The Art of Code: Bending lighting"
 					youtube tutorial by Martijn Steinrucken. Rather than the more advanced method of coloring the
-					mandelbulb
-					using edge detection, each of the
-					x,y,z dimensions is assigned a different RGB color.
+					mandelbulb using edge detection, each of the x,y,z dimensions is assigned a different RGB color.
 				</p>
 				<a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
 				<br>
@@ -92,7 +88,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="d-flex flex-row" id="myDIV">
+		<div class="d-flex flex-row" id="myDIV2">
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb2">
 				<h2>Mandelbulb using Inigo Quilez lighting</h2>
 				<p>
@@ -140,7 +136,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="d-flex flex-row" id="myDIV">
+		<div class="d-flex flex-row" id="myDIV3">
 			<div class="mandelbulb" style="flex-grow:1" id="mandelbulb4">
 				<h2>Earlier Attempts</h2>
 				<p>
