--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@
 		<!--<input class="form-control" id="myInput" type="text" placeholder="Search.."> -->
 
 		<div class="intro" style="flex-grow:1" id="intro">
-			<h2>Introduction</h2>
-			<p>I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics
+
+			<p>
+				<h2>Introduction</h2>
+				<br>
+				I was first exposed to the mandelbrot set a VERY long time ago when my father (a retired physics
 				professor) became interested in coding it using postscript.
 				I am not sure whether I ever saw his version, but I remember looking at the pictures in a book he
 				purchased. I was fascinated with the intricate
-				designs!</p>
+				designs!
+			</p>
 			<p>
 				Fast forward many decades. NYU professor Daniel Shiffman (The Coding Train) did a Mandelbulb coding
 				challenge in February using Processing. By the end of the challenge, he had created a point cloud
 				version of the mandelbulb! He was kind
 				enough to share his .txt file and processing code in the Coding Train Discord for a couple of us
 				that were interested in tryng to render the mandelbulb. This was the start of my journey--see below
-				for my earliest
-				attempts.<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
+				for my earliest attempts.
+				<br>
+				<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
 					Mandelbulb</a></p>
 			<p>
 				At this point, I have rendered the mandelbulb using several different lighting techniques. There is
