--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<br>
 				This version uses the lighting techniques of Inigo Quilez described in his Happy Jumping youtube
 				tutorial. Inigo Quilez is an expert at lighting, and the parameters were optimized for his animation
-				of a blobby monster jumping. It can be difficult to know how to adjust lighting parameters to a new
+				of a blobby monster jumping. It can be difficult to know how to port lighting parameters to a different
 				shader.
 				I think this is the reason that this version is over-exposed. There is also quite a bit
 				of aliasing when it is animating. Improving the lighting and animation are avenues for future
@@ -169,24 +169,24 @@
 				<br>
 				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
 				<br>
-				For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
-				like a very low-res version of the mandelbulb, but still
-				doesn't compare to the beauty of a nicely rendered version.
-				<br>
-				<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
-				<br>
-				By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
-				be a
-				better approach. During a livestream on Twitch, he explored this possibility and provided the
-				background
-				that I ultimately used to render the mandelbulb. <a class="link"
-					href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
+		</div>
+		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb5">
+			For the next attempt, I loaded the vertices into Blender. I was able to obtain something that looked
+			like a very low-res version of the mandelbulb, but still
+			doesn't compare to the beauty of a nicely rendered version.
+			<br>
+			<img class="img" src="assets/blender.png" alt="Blender Mandelbulb" width="500" height="500">
+			<br>
+			By this point, Dan Shiffman had consulted with some colleauges and concluded that using a SDF would
+			be a
+			better approach. During a livestream on Twitch, he explored this possibility and provided the
+			background
+			that I ultimately used to render the mandelbulb. <a class="link"
+				href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
 			</p>
 		</div>
 	</div>
-
-
-
+	
 	<!-- javascript -->
 	<!-- This function toggles a read more button -->
 	<script>
