--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</p>
 		</div>
 	</div>
-	<div class="d-flex flex-row" id="myDIV1">
+	<div class="flex-container" id="myDIV1">
 		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
 
 			<p>
@@ -169,8 +169,7 @@
 				the vertices (all 206,828 of them) into MeshLab and used a guide a found in github to try to mesh the
 				vertices. The first version
 				looked rather like a pin cushion because the normals were facing the wrong direction! I eventually came
-				up with this version. While not
-				completely horrible, it is not fully rendered and it kind of looks the mandelbulb is in a cage.
+				up with this version. While not horrible, it is not fully rendered and it kind of looks the mandelbulb is in a cage.
 				<br>
 				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
 				<br>
