small edit html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				This rendered version uses the lighting techniques described in The Art of Code: Bending lighting"
 				youtube tutorial by Martijn Steinrucken. Rather than the more advanced method of coloring the
 				mandelbulb using edge detection, each of the x, y, z dimensions is assigned a different RGB color.
-
+				<br>
 				<a class="link" href="https://www.youtube.com/watch?v=0RWaR7zApEo">Live Coding: Bending Light</a></a>
 			</p>
 			<br>
@@ -95,6 +95,7 @@
 				This version uses the basic ray marching starting point provided by Martijn Steinrucken. The diffuse
 				lighting still needs
 				improvement as the mandelbulb is too dark.
+				<br>
 				<a class="link" href="https://www.shadertoy.com/view/WtGXDD">Ray Marching Starting Point</a></a>
 				<br>
 				<br>
@@ -169,7 +170,8 @@
 				the vertices (all 206,828 of them) into MeshLab and used a guide a found in github to try to mesh the
 				vertices. The first version
 				looked rather like a pin cushion because the normals were facing the wrong direction! I eventually came
-				up with this version. While not horrible, it is not fully rendered and it kind of looks the mandelbulb is in a cage.
+				up with this version. While not horrible, it is not fully rendered and it kind of looks the mandelbulb
+				is in a cage.
 				<br>
 				<img class="img" src="assets/meshlab.png" alt="Meshlab Mandelbulb" width="500" height="500">
 				<br>
