--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</p>
 		</div>
 	</div>
-	<div class="flex-container" id="myDIV1">
+	<div class="d-flex flex-row" id="myDIV1">
 		<div class="mandelbulb" style="flex-grow:1" id="mandelbulb1">
 
 			<p>
