--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
 			<div class="overlay" id="myNav">
 				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 				<div class="overlay-content">
-					<a href="../html/color.html" id="color">Color</a>
-					<a href="../html/Lighting.html" id="lighting">Lighting</a>
-					<a href="../html/Initial.html" id="first">First Tries</a>
+					<button id="toggle">Three color Mandelbulb</button>
 				</div>
 			</div>
 
 			<div class="topNav">
 				<a href="../html/index.html" class="active" id="a0">Home</a>
-				<a href="../html/color.html">Colors</a>
-				<a href="../html/lighting.html">Lighting</a>
-				<a href="../html/first_tries.html">First Attempts</a>
 			</div>
 
 			<!-- Use any element to open/show the overlay navigation menu-->
