--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="overlay" id="myNav">
 				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 				<div class="overlay-content">
-					<button id="toggle">Three color Mandelbulb</button>
+					<!--<button id="toggle">Three color Mandelbulb</button>-->
 				</div>
 			</div>
 
@@ -88,7 +88,7 @@
 			</p>
 			<br>
 			<br>
-			<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="400" height="400">
+			<img class="img" src="assets/three_color.png" alt="Three Color Mandelbulb" width="500" height="500">
 			<br>
 			<a class="link" href="https://editor.p5js.org/kfahn/full/XF8pZKeRC">Three color mandelbulb
 				sketch</a></a>
@@ -132,8 +132,7 @@
 					Maths</a></a>.
 				<br>
 				<br>
-				<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" style="width:50vw;"
-					height="400">
+				<img class="img" src="assets/single_color1.png" alt="Single Color Mandelbulb:  Version 2" width="500" height="500">
 				<br>
 				<a class="link" href="https://editor.p5js.org/kfahn/full/3Yp7ZBCMw">Single color mandelbulb
 					sketch</a></a>
