trying to get layout right

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
 				background to render the mandelbulb.
 				<br>
 				<a class="link" href="https://thecodingtrain.com/CodingChallenges/168-mandelbulb.html">The
-					Mandelbulb</a></p>
-				<br>	
+					Mandelbulb</a>
 				<a class="link" href="https://www.youtube.com/watch?v=7ZIfXu_iPv4">Revisiting Mandelbulb</a></a>
-				<br>
+				<br></p>	
 				
 			<p>
 				I have rendered the mandelbulb using several different lighting techniques. There is
